<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/golf"
  android:gravity="center_vertical"
  android:orientation="vertical">
  <ImageView
      android:id="@+id/img"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:alpha="1.0"
      android:contentDescription="@string/app_name"
      android:scaleX="0.5"
      android:scaleY="0.5"
      android:src="@drawable/logo"/>
  <Button
      android:id="@+id/btnStart"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/now"
      android:textColor="#ffffff"
      android:onClick="onClick"/>
  <Button
      android:id="@+id/btnRegistration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/registration"
      android:textColor="#ffffff"
      android:onClick="onClick"/>
  <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textColor="#ffffff"
      android:onClick="onClick"/>
</LinearLayout>