<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <TextView
      android:id="@+id/txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/app_name"
      android:textSize="30sp"
      android:textColor="#ff99cc"/>
   <ImageButton
      android:id="@+id/btnFacebook"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClick"
      android:background="@android:color/transparent"
      android:src="@drawable/facebook"/>
  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
      <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:inputType="textEmailAddress"/>
    </TableRow>
    <TableRow>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
      <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="textPassword"/>
    </TableRow>
    <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:onClick="onClick"/>
    <Button
      android:id="@+id/btnForget"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/forget"
      android:onClick="onClick"/>
  </TableLayout>
</LinearLayout>
