<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
      android:id="@+id/btnHistory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_history"
      android:onClick="onClick"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_golfcoursesearch"/>
    <EditText
        android:id="@+id/txtGolfcourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:hint="@string/hint_golfcourse"
        android:inputType="text"
        android:imeOptions="actionSearch"/>
    <ListView
        android:id="@+id/golfcourselist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@android:layout/simple_list_item_1"
        >
    </ListView>
</LinearLayout>
